--- a/options.conf
+++ b/options.conf
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = true
 # set profile for pgo
