p11-kit: Autospec creation for update from version 0.23.15 to version 0.23.22
Albert Chin-A-Young (1):
      p11-kit/modules.c: Avoid passing 0 as first argument to calloc().

Alexander Sosedkin (3):
      Remove more duplicate separators in p11_path_build
      Use is_path_component in one more place
      Rename is_path_component to is_path_separator

Alon Bar-Lev (1):
      trust: do not allow daylight to invalidate date validation

Alvin Chen (1):
      Update pkcs11 header to allow TPM2-PKCS11 to compile

Anders Kaseorg (1):
      p11_test_copy_setgid: Skip setgid tests on nosuid filesystems

Anderson Toshiyuki Sasaki (2):
      proxy: Fix slot ID reuse, avoiding duplicating IDs
      test-proxy: Add test for slot ID reuse

Daiki Ueno (118):
      extract-jks: Prefer _p11_extract_jks_timestamp to SOURCE_DATE_EPOCH
      trust: Ignore unreadable content in anchors
      proxy: Refresh slot list on every C_GetSlotList call
      conf: Ignore user configuration if the program is running as root
      proxy: Support C_WaitForSlotEvent() if CKF_DONT_BLOCK is specified
      Release 0.23.16
      build: Suppress compiler warning
      tests: Avoid uninitialized value in test-proxy.c
      common: Fix vasprintf emulation
      common: Make issetugid check simpler
      virtual: Rename virtual-fixed.c to virtual-fixed-generated.h
      conf: Skip root UID check on Windows
      tests: Don't assume / is not writable on Windows in test-token.c
      tests: Fix temp file permission before deleting
      tests: Skip tests calling getauxval(AT_SECURE) if binary is on /tmp
      tests: Fix memleaks in test-jks.c
      tests: Add tmpdir argument to p11_test_copy_setgid
      build: Move check_PROGRAMS into subdirectories
      build: Don't hardcode module path
      po: Remove en@{,bold}quot from LINGUAS
      trust: Fix mismatched return values
      build: Add meson build support
      .travis.yml: Use meson for building
      build: Make threads dependency more explicit
  

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = p11-kit
-url = https://github.com/p11-glue/p11-kit/releases/download/0.23.15/p11-kit-0.23.15.tar.gz
+url = https://github.com/p11-glue/p11-kit/releases/download/0.23.22/p11-kit-0.23.22.tar.xz
 archives = 
 giturl = https://github.com/p11-glue/p11-kit.git
 domain = 
@@ -46,7 +46,7 @@ optimize_size = true
 # set profile for pgo
 pgo = false
 # set flags for security-sensitive builds
-security_sensitive = false
+security_sensitive = true
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
