--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = p11-kit
-url = https://github.com/p11-glue/p11-kit/releases/download/0.24.0/p11-kit-0.24.0.tar.xz
+url = https://github.com/p11-glue/p11-kit/releases/download/0.24.1/p11-kit-0.24.1.tar.xz
 archives = 
 giturl = https://github.com/p11-glue/p11-kit.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = true
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = true
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
