--- a/meson_options.txt
+++ b/meson_options.txt
@@ -18,6 +18,10 @@ option('module_path', type : 'string',
        value : '',
        description : 'Load modules with relative path names from here')
 
+option('env_override_paths', type : 'string',
+       value : '',
+       description : 'Override module and config paths with environment variables')
+
 option('libffi', type : 'feature',
        value : 'auto',
        description : 'Use libffi for building closures')
@@ -70,10 +74,14 @@ option('test', type : 'boolean',
        value : true,
        description : 'Enable building test programs')
 
+option('post_install_test', type : 'boolean',
+       value : false,
+       description : 'Enable running post-install test programs')
+
 option('rpc_min', type : 'integer',
        min : 0, max : 0, value : 0,
        description : 'Minimum RPC protocol version we support')
 
 option('rpc_max', type : 'integer',
-       min : 0, max : 0, value : 0,
+       min : 0, max : 1, value : 1,
        description : 'Maximum RPC protocol version we support')
