--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = p11-kit
-url = https://github.com/p11-glue/p11-kit/releases/download/0.24.1/p11-kit-0.24.1.tar.xz
+url = https://github.com/p11-glue/p11-kit/releases/download/0.25.4/p11-kit-0.25.4.tar.xz
 archives = 
 giturl = https://github.com/p11-glue/p11-kit.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = true
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
@@ -19,6 +21,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -27,6 +31,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
@@ -55,6 +61,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = true
+# configure build for apx
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
@@ -63,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = false
+# use ninja build files
+use_ninja = false
 # require package verification for build
-verify_required = true
+verify_required = false
 
