--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = p11-kit
-url = https://github.com/p11-glue/p11-kit/releases/download/0.25.4/p11-kit-0.25.4.tar.xz
+url = https://github.com/p11-glue/p11-kit/releases/download/0.25.5/p11-kit-0.25.5.tar.xz
 archives = 
 giturl = https://github.com/p11-glue/p11-kit.git
 domain = 
@@ -16,7 +16,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -74,5 +74,5 @@ use_lto = false
 # use ninja build files
 use_ninja = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
